--- a/MusicPro/productos.html
+++ b/MusicPro/productos.html
@@ -56,7 +56,9 @@
             </div>
         </div>
     </div>
-
+<!    --Instrumentos de Cuerdas-->
+   
+    
     <div class="product-row" >
         <div class="card " category="cuerdas">
             <img src="img/ibañez-grgm.jpg" alt="img" class="img_card" >
@@ -135,6 +137,263 @@
     </div>
     
 
+
+
+ <!--Instrumentos de Percusion-->
+<div class="product-row">
+    <div class="card">
+        <img src="img/percusion/Tama-Imperialstar-IE62H6W.jpg" alt="img">
+        <h2>Batería acústica Tama Imperialstar IE62H6W 6 piezas HBK</h2>
+        <p>Kit de 6 piezas, ideal para bateristas principiantes que desean tener la experiencia de una batería de alta gama.</p>
+        <p class="price">$819.900</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/percusion/TAMA-Stagestar-SG50H4C.jpg" alt="img">
+        <h2>Batería acústica TAMA Stagestar SG50H4C 4 piezas - SCP</h2>
+        <p>El kit STAGESTAR viene con un soporte de tom Omni-ball, así como un hardware de doble refuerzo para una mayor estabilidad.</p>
+        <p class="price">$899.900</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/percusion/Roland-TD-17KV-.jpg" alt="img">
+        <h2>Batería electrónica Roland TD-17KV - C/ Stand MDS-COM</h2>
+        <p>El kit de la TD-17KV incluye el nuevo KD-10 Kick Trigger Pad, un Kick pad sólido y resistente con una gran respuesta dinámica.</p>
+        <p class="price">$1.859.900</p>
+    </div>
+</div>
+
+
+<div class="product-row">
+    <div class="card">
+        <img src="img/percusion/Roland-TD-1DMK-230.jpg" alt="img">
+        <h2>Batería electrónica Roland TD-1DMK-230</h2>
+        <p>La TD-1DMK te ofrece una gratificante experiencia musical en un kit compacto y transportable.</p>
+        <p class="price">$989.900</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/percusion/Alesis-Turbo-Mesh.jpg" alt="img">
+        <h2>Batería Electrónica Alesis Turbo Mesh Kit Incluye Baqueta</h2>
+        <p>Es un kit de batería electrónica completo de 7 piezas centrado en la tecnología Alesismesh de última generación.</p>
+        <p class="price">$819.990</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/percusion/Alesis E-Drum-Total.jpg" alt="img">
+        <h2>Bateria Electrónica Alesis E-Drum Total</h2>
+        <p>Cuenta con (4) tambores,(3) platillos, El bombo y el charles están controlados por pedales.</p>
+        <p class="price">$819.990</p>
+    </div>
+</div>
+
+
+
+<div class="product-row">
+    <div class="card">
+        <img src="img/percusion/PEARL_ROADSHOW_TURQUESA_RS525SC-C703.jpg" alt="img">
+        <h2>BATERIA PEARL ROADSHOW TURQUESA RS525SC-C703</h2>
+        <p>Set de baterías Pearl Roadshow de 5 piezas. Formadasde múltiples capas de madera dura unida.</p>
+        <p class="price">$803.990</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/percusion/PEARL-ROADSHOW-COLOR-SILVER-RS525SC-C706.png" alt="img">
+        <h2>BATERIA PEARL ROADSHOW COLOR SILVER RS525SC-C706</h2>
+        <p>Set de baterías Pearl Roadshow de 5 piezas. Formadasde múltiples capas de madera dura unida.</p>
+        <p class="price">$686.990</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/percusion/sonor-sq1-studio-satin-cooper-brown.jpg" alt="img">
+        <h2>Sonor SQ1 Studio Satin Cooper Brown</h2>
+        <p>Bateria profesional en abedul de primera calidad. Fabricada en Alemania.</p>
+        <p class="price">$2.290.000</p>
+    </div>
+</div>
+
+
+
+<div class="product-row">
+    <div class="card">
+        <img src="img/percusion/sonor-aqx-jungle-rms-red-moon-sparkle.jpg" alt="img">
+        <h2>Sonor AQX Jungle RMS Red Moon Sparkle</h2>
+        <p>Cascos de Álamo. Fácilmente transportable. Cuenta con alzambombo y brazo de plato al bombo.</p>
+        <p class="price">$475.990</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/percusion/mapex-armory-studio-rock-caribbean-burst.jpg" alt="img">
+        <h2>Mapex Armory Studio Rock Caribbean Burst</h2>
+        <p>Un set que te ofrece por un precio excepcional un sonido espectacular. Cascos de arce abedul. Eje SONIClear. Caja Tomahawk.</p>
+        <p class="price">$1.020.000</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/percusion/mapex-armory-standard-tanzanite-burst.jpg" alt="img">
+        <h2>Mapex Armory Standard Tanzanite Burst</h2>
+        <p>Un set que te ofrece por un precio excepcional un sonido espectacular. Cascos de arce abedul. Eje SONIClear. Caja Tomahawk.</p>
+        <p class="price">$914.990</p>
+    </div>
+</div>
+
+<!--AMPLIFICADORES-->
+
+<div class="product-row">
+    <div class="card">
+        <img src="img/amplificadores/Peavey-6505-MH.jpg" alt="img">
+        <h2>Cabezal de guitarra eléctrica Peavey 6505 MH</h2>
+        <p>El cabezal de guitarra de Peavey ahora en modelo Mini-Cabezal, diseñado con la finalidad de brindar movilidad y versatilidad.</p>
+        <p class="price">$920.000</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/amplificadores/EVH-5150-III.jpg" alt="img">
+        <h2>Cabezal EVH 5150 III LBXII 15W Mini</h2>
+        <p>El cabezal de guitarra  de 15 watts, entrega un sacador de gran alcance que cortará a través de cualquier mezcla.</p>
+        <p class="price">$1.023.923</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/amplificadores/Engl-MetalMaster-40-E319.jpg" alt="img">
+        <h2>Cabezal de Guitarra a Tubos Engl MetalMaster 40 E319 40W</h2>
+        <p>Ffabricación alemana ofrece 40 W, con controles simples de modelado de tono, dos canales, reverberación incorporada y mucho más.</p>
+        <p class="price">$1.398.927</p>
+    </div>
+</div>
+
+
+<div class="product-row">
+    <div class="card">
+        <img src="img/amplificadores/EVH-5150-III-50W-1.jpg" alt="img">
+        <h2>Cabezal de Guitarra Eléctrica EVH 5150 III 50W</h2>
+        <p>Su tamaño más pequeño y su portabilidad lo convierten en un amplificador perfecto para un volumen, tono y rendimiento de arena en un paquete compacto.</p>
+        <p class="price">$1.530.000</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/amplificadores/ENGL-Ritchie-Blackmore-Signature-1.jpg" alt="img">
+        <h2>Cabezal de Guitarra Engl Ritchie Blackmore Signature 100W</h2>
+        <p>Este es un cabezal de amplificador de guitarra totalmente a válvulas con el sonido que hizo famoso la leyenda de la guitarra Ritchie Blackmore.</p>
+        <p class="price">$2.370.080</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/amplificadores/Pavey-MH-Mini-2-1.jpg" alt="img">
+        <h2>Cabezal de Guitarra a Tubos Peavey Invective MH Mini 20W</h2>
+        <p>El cabezal invectivo MH Mini de Peavey se ha desarrollado en colaboración con el talentoso Misha .</p>
+        <p class="price">$980.000</p>
+    </div>
+</div>
+
+
+<div class="product-row">
+    <div class="card">
+        <img src="img/amplificadores/PEAVEY-PV215.jpg" alt="img">
+        <h2>CAJA PASIVA 2×15" PEAVEY PV215</h2>
+        <p>Sistema de parlantes de casi tres vías basado en woofers duales de 15 y un controlador de compresión dinámica de diafragma de titanio.</p>
+        <p class="price">$289.900</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/amplificadores/Peavey-DM112.jpg" alt="img">
+        <h2>CAJA ACTIVA Peavey DM112</h2>
+        <p>Caja con altavoz bi-amplificado bidireccional DSP I / O a 96 kHz y 24 bits, con una potencia de 650W RMS, que cuenta con woofer de 12.</p>
+        <p class="price">$349.990</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/amplificadores/Marshall-1960A.jpg" alt="img">
+        <h2>Gabinete 1960A Marshall</h2>
+        <p>Diseñado para ofrecer un gran sonido para presentaciones en vivo. Con diseño auténtico de los años 60 y potencia de 300w.</p>
+        <p class="price">$1.522.990</p>
+    </div>
+</div>
+
+
+<div class="product-row">
+    <div class="card">
+        <img src="img/amplificadores/Marshall-1922_1.jpg" alt="img">
+        <h2>Gabinete Guitarra Eléctrica 1922 2x12 - Marshall</h2>
+        <p>El gabinete 2×12 que es lo suficientemente compacto y potente gracias a los dos parlantes Celestion G12T-75 y 150W de potencia.</p>
+        <p class="price">$998.990</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/amplificadores/ENGL-212VH-Pro.jpg" alt="img">
+        <h2>Engl E212VH Pro Negro Horizontal</h2>
+        <p>El nuevo gabinete 2x12. Con un sonido muy similar al ENGL 412 XXL, pero con un cuerpo mas pequeño y ligero.</p>
+        <p class="price">$570.000</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/amplificadores/ENGL-E212VB-PRO.jpg" alt="img">
+        <h2>Engl E212VB Pro Vertikal</h2>
+        <p> Con dos altavoces Celestion Vintage 30 en un recinto sellado, el gabinete ofrece un sonido con unos bajos firmes.</p>
+        <p class="price">$570.000</p>
+    </div>
+</div>
+
+
+
+<div class="product-row">
+    <div class="card">
+        <img src="img/amplificadores/EVH-5150III-2X12.jpg" alt="img">
+        <h2>EVH 5150III 2X12 Gabinete, Ivory</h2>
+        <p>El gabinete 5150III® de 2×12 tiene una potencia de 16 ohms y está cargado con dos parlantes Celestion® G12H 30W Anniversary Series de 12"</p>
+        <p class="price">$720.000</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/amplificadores/EVH-5150-III-EVH-1X1''.jpg" alt="img">
+        <h2>CAJA FENDER EVH 5150 III EVH 1X12'' 25W VAN HALEN CON DETALLES B-STOCK</h2>
+        <p>Gabinete para amplificador de guitarra Eddie van Halen de color marfil con 1 altavoz Celestion Heritage de 12" de 16 Ohmios</p>
+        <p class="price">$354.990</p>
+    </div>
+&nbsp;
+&nbsp;
+&nbsp;
+    <div class="card">
+        <img src="img/" alt="img">
+        <h2></h2>
+        <p></p>
+        <p class="price">$</p>
+    </div>
+</div>
 </section>
 </body>
 <script src="main.js"></script>
