login-diseño de inicio de sesion y registro  finalizado(Espera de verificacion)

--- a/MusicPro/login/inicioSesion.html
+++ b/MusicPro/login/inicioSesion.html
@@ -30,6 +30,8 @@
     <!--About -->
     <section id="formulario" class="formulario">
         <div class="contenedor" id="contenedor">
+            <h1>Iniciar Sesion<hr>
+            </h1>
             <form class="login">
                 <div class="correo">
                     <label for="inputEmail" class="label_log">Correo Electronico</label>
