mejora de carrito

--- a/MusicPro/carrito/carrito.html
+++ b/MusicPro/carrito/carrito.html
@@ -58,22 +58,22 @@
         </div>
 
 
-        <div class="container">
+        
+        <!-- Elementos generados a partir del JSON -->
+        <main id="items" class="items"></main>
+
+        <div class="carro">
             <div class="row">
                 <!-- Carrito -->
-                <aside class="col-sm-4">
+                <aside class="column">
                     <h2>Carrito</h2>
                     <!-- Elementos del carrito -->
-                    <ul id="carrito" class="list-group"></ul>
+                    <ul id="list_carr" class="list_group"></ul>
                     <hr>
                     <!-- Precio total -->
                     <p class="text-right">Total: $ <span id="total"></span></p>
                     <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
                 </aside>
-
-                <!-- Elementos generados a partir del JSON -->
-                <main id="items" class="col-sm-8 row"></main>
-
             </div>
         </div>
     </section>
