mejora de footer

--- a/MusicPro/index.html
+++ b/MusicPro/index.html
@@ -20,6 +20,7 @@
             <li><a href="contacto.html" onclick="toggleMenu();">Contacto</a></li>
             <li><a href="#productos" onclick="toggleMenu();">Menu</a></li>
             <li><a href="#productos" onclick="toggleMenu();">Productos</a></li>
+            <li><a href="#productos" onclick="toggleMenu();">iniciar  Sesion</a></li>
 
         </ul>
     </header>
@@ -50,17 +51,38 @@
             </div>
         </div>
     </section>
+
+    <footer id="footer">
+        <div class="fila">
+            <h2>Información de la empresa</h2>
+            <hr class="line_footer">
+            <div class="columna">
+                <ul>
+                <li><strong>Dirección:</strong> <a href="" class="hvf">Calle Juanito Fernandez, Ciudad: Providencia</a> </li>
+                <li><strong>Teléfono:</strong> <a href="tel:332-676-559" class="hvf">332-676-559</a> </li>
+                <li><strong>Correo electrónico:</strong> <a href="mailto:contacto@musicpro.cl" class="hvf">contacto@musicpro.cl</a> </li>
+                </ul>
+            </div>
+        </div>
+        <div class=" fila">
+            <h3>Enlace</h3>
+            <hr class="line_footer">
+            <div class="columna">
+                <h5 class="bodyF">Instagram: <a href="http://Instagram.com" target="_blank" rel="noopener noreferrer" class="hvf">@MusicPro</a></h5>
+              <h5 class="bodyF">Facebook: <a href="http://Facebook.com" target="_blank" rel="noopener noreferrer" class="hvf">MusicPro</a></h5>
+
+            </div>
+        </div>
+
+        <div class="fila">
+            <h3 id="Copyright">Copyright 2023</h3>
+        </div>
+
+    </footer>
     
 
     <div>
-        <section id="informacion">
-        <h2>Información de la empresa</h2>
-        <ul>
-        <li><strong>Dirección:</strong> Calle: Juanito Fernandez, Ciudad: Providencia</li>
-        <li><strong>Teléfono:</strong> 332-676-559</li>
-        <li><strong>Correo electrónico:</strong> contacto@musicpro.cl</li>
-        </ul>
-        </section>
+        
     </div>
 
 </body>
