--- a/MusicPro/carrito1.1/comprar.html
+++ b/MusicPro/carrito1.1/comprar.html
@@ -1,192 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
-    <title>MusicPro-Productos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="productos.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+  <title>MusicPro-Productos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="productos.css">
 
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet" class="nn">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet" class="nn">
 
 </head>
+
 <body>
-        <!-- Navegation -->
-<header class="sticky">
+  <!-- Navegation -->
+  <header class="sticky">
     <a href="#" class="logo">MusicPro<span>.</span></a>
     <div class="menuToggle" onclick="toggleMenu();"></div>
     <ul class="navigation">
-        
-        <li><a href="index.html" onclick="toggleMenu();">Inicio</a></li>
-        <li><a href="#about" onclick="toggleMenu();">Acerca de Nosotros</a></li>
-        <li><a href="contacto.html" onclick="toggleMenu();">Contacto</a></li>
-        <li><a href="#productos" onclick="toggleMenu();">Menu</a></li>
-        <li><a href="#productos" onclick="toggleMenu();">Productos</a></li>
+
+      <li><a href="index.html" onclick="toggleMenu();">Inicio</a></li>
+      <li><a href="#about" onclick="toggleMenu();">Acerca de Nosotros</a></li>
+      <li><a href="contacto.html" onclick="toggleMenu();">Contacto</a></li>
+      <li><a href="#productos" onclick="toggleMenu();">Menu</a></li>
+      <li><a href="#productos" onclick="toggleMenu();">Productos</a></li>
 
     </ul>
-</header>
-<br><br><br>
-<button id="btnAbrir" class="btn btn-danger" >Elejir Tipo de Despacho</button>
+  </header>
+  <section id="fase_compra">
+    <div class="carro" id="carro" calss="col-sm-6">
+      <div class="contorno">
+        <!-- Carrito -->
+        <aside class="cuerpoC">
+          <h2>Carrito</h2>
+          <!-- Elementos del carrito -->
+          <table>
+            <ul id="carrito" class="list-group"></ul>
+          </table>
+          <hr>
+          <!-- Precio total -->
+          <p class="text-right">Total: $ <span id="total"></span></p>
+          <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
+          <button class="btn btn-danger"><a href="/Users/MAS/Desktop/comprar/comprar.html"
+              class="btn_comprar">Comprar</a></button>
+        </aside>
+      </div>
+    </div>
 
-  <div class="ventanaEmergente" id="miVentana">
-    <div class="contenido" id="contenedor">
-      <h2>Seleccione el tipo de Despacho</h2>
-      <!--boton despacho-->
-          <button id="btnAbrir1" class="btn btn-danger">Despacho a Domicilio</button>
-          <div class="ventanaEmergente" id="miVentana1">
-            <div class="contenido">
-  <!--formulario despacho-->
-  <dialog class="contenido" id="contenedor" >
-         <h2> Formulario Despacho a Domicilio</h2>
+    <div class="btn_contenedor">
+      <button id="btnAbrir" class="btn btn-danger">Elejir Tipo de Despacho</button>
+    </div>
+
+
+    <div class="ventanaEmergente" id="miVentana">
+      <div class="opc_conten" id="opc_conten">
+        <h2>Seleccione el tipo de Despacho</h2>
+        <!--botones-->
+        <button id="btnAbrir1" class="btn btn-danger">Retiro en Tienda</button>
+        <button id="btnAbrir2" class="btn btn-danger">Despacho a Domicilio</button>
+
+      </div>
+    </div>
+    <!-- despacho-->
+
+    <div class="ventanaEmergente" id="miVentana1">
+      <h1>Ubicacion</h1>
+      <div class="fila">
+
+        <fieldset class="columna_from">
+          <legend>Region</legend>
+          <select name="región" id="región">
+              <option value="0: null"> Selecciona una Región </option>
+              <option value="1: Object" class="ng-star-inserted"> Región Metropolitana </option><!----><!---->
+              <option value="2: Object" class="ng-star-inserted"> Región de Tarapacá </option><!----><!---->
+              <option value="3: Object" class="ng-star-inserted"> Región de Antofagasta </option><!----><!---->
+              <option value="4: Object" class="ng-star-inserted"> Región de Atacama </option><!----><!---->
+              <option value="5: Object" class="ng-star-inserted"> Región de Coquimbo </option><!----><!---->
+              <option value="6: Object" class="ng-star-inserted"> Región de Valparaíso </option><!----><!---->
+              <option value="7: Object" class="ng-star-inserted"> Región del Libertador Gral. Bernardo O’Higgins
+              </option><!----><!---->
+              <option value="8: Object" class="ng-star-inserted"> Región del Maule </option><!----><!---->
+              <option value="9: Object" class="ng-star-inserted"> Región del Bío Bío </option><!----><!---->
+              <option value="10: Object" class="ng-star-inserted"> Región de la Araucanía </option><!----><!---->
+              <option value="11: Object" class="ng-star-inserted"> Región de los Lagos </option><!----><!---->
+              <option value="12: Object" class="ng-star-inserted"> Región de los Ríos </option><!----><!---->
+              <option value="13: Object" class="ng-star-inserted"> Región de Arica y Parinacota </option><!----><!---->
+              <option value="14: Object" class="ng-star-inserted"> Región del Ñuble </option><!----><!----><!---->
+            </select>
+
+          </select>
+          <!-- <label for="inputRegion" class="form-label">Region</label>
+          <input type="text" class="form-control" id="inputRegion" placeholder="Valparaiso" required
+            pattern="[A-Za-z]+" /> -->
+        </fieldset>
+
+        <div class="columna">
+          <label for="inputCommune" class="form-label">Comuna</label>
+          <input type="text" class="form-control" id="inputCommune" placeholder="Vina del Mar" required
+            pattern="[A-Za-z]+" />
         </div>
-        <div class="fila">
-          <div class="columna">
-            <label for="inputCommune" class="form-label">Comuna</label>
-            <input
-              type="text"
-              class="form-control"
-              id="inputCommune"
-              placeholder="Vina del Mar"
-              required
-              pattern="[A-Za-z]+"
-            />
-          </div>
-          <div class="columna">
-            <label for="inputRegion" class="form-label">Region</label>
-            <input
-              type="text"
-              class="form-control"
-              id="inputRegion"
-              placeholder="Valparaiso"
-              required
-              pattern="[A-Za-z]+"
-            />
-          </div>
-                    <div class="columna">
-            <label for="inputRegion" class="form-label">Sucursal</label>
-            <input
-              type="text"
-              class="form-control"
-              id="inputRegion"
-              placeholder="Valparaiso"
-              required
-              pattern="[A-Za-z]+"
-            />
-          </div>
-         <div class="boton">
+
+        <div class="columna">
+          <label for="inputRegion" class="form-label">Sucursal</label>
+          <input type="text" class="form-control" id="inputRegion" placeholder="Calle Juanito Fernandez " required
+            pattern="[A-Za-z]+" />
+        </div>
+        <div class="boton">
           <button type="submit" class="btn_enviar btn btn-danger">Enviar</button>
         </div>
-        </div>
+      </div>
       </dialog>
-        <!--boton cerrar despacho-->
-              <button id="btnCerrar1" class="btn btn-danger">Cerrar</button>
+      <!--boton cerrar despacho-->
+      <button id="btnCerrar1" class="btn btn-danger">Atras</button>
+    </div>
+    <!--retiro en tienda-->
+
+    <div class="ventanaEmergente" id="miVentana2">
+      <div class="contenido">
+        <!--formulario retiro en tienda-->
+        <form class="contenido" id="contenedor">
+          <h1>Formulario Retiro en Tienda
+          </h1>
+          <div class="fila">
+            <div class="columna">
+              <label for="inputname" class="form-label">Nombres</label>
+              <input type="name" class="form-control" id="inputname" placeholder="Luis enrique" required
+                pattern="[A-Za-z]+" />
+            </div>
+            <div class="columna">
+              <label for="inputlastnames" class="form-label">Apellidos</label>
+              <input type="lastnames" class="form-control" id="inputlastnames" placeholder="Leiva Lopes" required
+                pattern="[A-Za-z]+" />
             </div>
           </div>
-      <!--boton retiro en tienda-->
-          <button id="btnAbrir2" class="btn btn-danger">Despacho a Domicilio</button>
-          <div class="ventanaEmergente" id="miVentana2">
-            <div class="contenido">
-  <!--formulario retiro en tienda-->
-  <form class="contenido" id="contenedor" >
-        <h1>Formulario Retiro en Tienda
-        </h1>
-        <div class="fila">
-          <div class="columna">
-            <label for="inputname" class="form-label">Nombres</label>
-            <input
-              type="name"
-              class="form-control"
-              id="inputname"
-              placeholder="Luis enrique"
-              required
-              pattern="[A-Za-z]+"
-            />
-          </div>
-          <div class="columna">
-            <label for="inputlastnames" class="form-label">Apellidos</label>
-            <input
-              type="lastnames"
-              class="form-control"
-              id="inputlastnames"
-              placeholder="Leiva Lopes"
-              required
-              pattern="[A-Za-z]+"
-            />
-          </div>
-        </div>
-       
+
           <div class="Columna">
             <label for="inputphone" class="form-label">Telefono</label>
-            <input
-              type="phone"
-              class="form-control"
-              id="inputphone"
-              placeholder="+56 9 1234 5678"
-              required
-              pattern="[0-9]+"
-            />
+            <input type="phone" class="form-control" id="inputphone" placeholder="+56 9 1234 5678" required
+              pattern="[0-9]+" />
           </div>
+      </div>
+      <div class="fila">
+        <div class="columna">
+          <label for="inputCommune" class="form-label">Comuna</label>
+          <input type="text" class="form-control" id="inputCommune" placeholder="Vina del Mar" required
+            pattern="[A-Za-z]+" />
         </div>
-        <div class="fila">
-          <div class="columna">
-            <label for="inputCommune" class="form-label">Comuna</label>
-            <input
-              type="text"
-              class="form-control"
-              id="inputCommune"
-              placeholder="Vina del Mar"
-              required
-              pattern="[A-Za-z]+"
-            />
-          </div>
-          <div class="columna">
-            <label for="inputRegion" class="form-label">Region</label>
-            <input
-              type="text"
-              class="form-control"
-              id="inputRegion"
-              placeholder="Valparaiso"
-              required
-              pattern="[A-Za-z]+"
-            />
-          </div>
-         <div class="boton">
+        <div class="columna">
+          <label for="inputRegion" class="form-label">Region</label>
+          <input type="text" class="form-control" id="inputRegion" placeholder="Valparaiso" required
+            pattern="[A-Za-z]+" />
+        </div>
+        <div class="boton">
           <button type="submit" class="btn_enviar btn btn-danger">Enviar</button>
         </div>
-        </div>
+      </div>
       </form>
-        <!--boton cerrar despacho-->
-              <button id="btnCerrar2" class="btn btn-danger">Cerrar</button>
-            </div>
-          </div>
-              <button id="btnCerrar" class="btn btn-danger">Cerrar</button>
+      <!--boton cerrar despacho-->
+      <button id="btnCerrar2" class="btn btn-danger">Cerrar</button>
     </div>
 
-  </div>
+    <button id="btnCerrar" class="btn btn-danger">X</button>
 
-<div class="container" id="contenedor" calss="col-sm-6">
-    <div class="row">
-        <!-- Carrito -->
-        <aside class="col-sm-4" clas id"rr">
-            <h2>Carrito</h2>
-            <!-- Elementos del carrito -->
-            <table><ul id="carrito" class="list-group"></ul></table>
-            <hr>
-            <!-- Precio total -->
-            <p class="text-right">Total: $ <span id="total"></span></p>
-            <button id="boton-vaciar" class="btn btn-danger">Vaciar</button>
-            <a href="/Users/MAS/Desktop/comprar/comprar.html"><button class="btn btn-danger">Comprar</button></a>
-        </aside>
 
-    </div>
 
-</div>
+  </section>
+
 </body>
 <script src="jj.js"></script>
 <script src="carrito.js"></script>
