--- a/MusicPro/carrito1.1/comprar.html
+++ b/MusicPro/carrito1.1/comprar.html
@@ -75,31 +75,29 @@
       <div class="fila">
 
         <fieldset class="columna_from">
-          <legend>Region</legend>
+          <label class="title_select">Region</label>
           <select name="región" id="región">
               <option value="0: null"> Selecciona una Región </option>
-              <option value="1: Object" class="ng-star-inserted"> Región Metropolitana </option><!----><!---->
-              <option value="2: Object" class="ng-star-inserted"> Región de Tarapacá </option><!----><!---->
-              <option value="3: Object" class="ng-star-inserted"> Región de Antofagasta </option><!----><!---->
-              <option value="4: Object" class="ng-star-inserted"> Región de Atacama </option><!----><!---->
-              <option value="5: Object" class="ng-star-inserted"> Región de Coquimbo </option><!----><!---->
-              <option value="6: Object" class="ng-star-inserted"> Región de Valparaíso </option><!----><!---->
-              <option value="7: Object" class="ng-star-inserted"> Región del Libertador Gral. Bernardo O’Higgins
-              </option><!----><!---->
-              <option value="8: Object" class="ng-star-inserted"> Región del Maule </option><!----><!---->
-              <option value="9: Object" class="ng-star-inserted"> Región del Bío Bío </option><!----><!---->
-              <option value="10: Object" class="ng-star-inserted"> Región de la Araucanía </option><!----><!---->
-              <option value="11: Object" class="ng-star-inserted"> Región de los Lagos </option><!----><!---->
-              <option value="12: Object" class="ng-star-inserted"> Región de los Ríos </option><!----><!---->
-              <option value="13: Object" class="ng-star-inserted"> Región de Arica y Parinacota </option><!----><!---->
-              <option value="14: Object" class="ng-star-inserted"> Región del Ñuble </option><!----><!----><!---->
-            </select>
-
+              <option value="1: Object" class="selec_opc"> Región Metropolitana </option><!----><!---->
+              <option value="2: Object" class="selec_opc"> Región de Tarapacá </option><!----><!---->
+              <option value="3: Object" class="selec_opc"> Región de Antofagasta </option><!----><!---->
+              <option value="4: Object" class="selec_opc"> Región de Atacama </option><!----><!---->
+              <option value="5: Object" class="selec_opc"> Región de Coquimbo </option><!----><!---->
+              <option value="6: Object" class="selec_opc"> Región de Valparaíso </option><!----><!---->
+              <option value="7: Object" class="selec_opc"> Región del Libertador Gral. Bernardo O’Higgins</option><!----><!---->
+              <option value="8: Object" class="selec_opc"> Región del Maule </option><!----><!---->
+              <option value="9: Object" class="selec_opc"> Región del Bío Bío </option><!----><!---->
+              <option value="10: Object" class="selec_opc"> Región de la Araucanía </option><!----><!---->
+              <option value="11: Object" class="selec_opc"> Región de los Lagos </option><!----><!---->
+              <option value="12: Object" class="selec_opc"> Región de los Ríos </option><!----><!---->
+              <option value="13: Object" class="selec_opc"> Región de Arica y Parinacota </option><!----><!---->
+              <option value="14: Object" class="selec_opc"> Región del Ñuble </option><!----><!----><!---->
           </select>
-          <!-- <label for="inputRegion" class="form-label">Region</label>
+        </fieldset>
+
+        <!-- <label for="inputRegion" class="form-label">Region</label>
           <input type="text" class="form-control" id="inputRegion" placeholder="Valparaiso" required
             pattern="[A-Za-z]+" /> -->
-        </fieldset>
 
         <div class="columna">
           <label for="inputCommune" class="form-label">Comuna</label>
